@@ -324,10 +324,12 @@ class ConfigManager(QObject):
     RENAMED_OPTIONS = {
         ('colors', 'tab.fg.odd'): 'tabs.fg.odd',
         ('colors', 'tab.fg.even'): 'tabs.fg.even',
-        ('colors', 'tab.fg.selected'): 'tabs.fg.selected',
+        ('colors', 'tab.fg.selected'): 'tabs.fg.selected.odd',
+        ('colors', 'tabs.fg.selected'): 'tabs.fg.selected.odd',
         ('colors', 'tab.bg.odd'): 'tabs.bg.odd',
         ('colors', 'tab.bg.even'): 'tabs.bg.even',
-        ('colors', 'tab.bg.selected'): 'tabs.bg.selected',
+        ('colors', 'tab.bg.selected'): 'tabs.bg.selected.odd',
+        ('colors', 'tabs.bg.selected'): 'tabs.bg.selected.odd',
         ('colors', 'tab.bg.bar'): 'tabs.bg.bar',
         ('colors', 'tab.indicator.start'): 'tabs.indicator.start',
         ('colors', 'tab.indicator.stop'): 'tabs.indicator.stop',
