@@ -973,13 +973,21 @@ def data(readonly=False):
              SettingValue(typ.QtColor(), 'darkgrey'),
              "Background color of unselected even tabs."),
 
-            ('tabs.fg.selected',
+            ('tabs.fg.selected.odd',
              SettingValue(typ.QtColor(), 'white'),
-             "Foreground color of selected tabs."),
+             "Foreground color of selected odd tabs."),
 
-            ('tabs.bg.selected',
+            ('tabs.bg.selected.odd',
              SettingValue(typ.QtColor(), 'black'),
-             "Background color of selected tabs."),
+             "Background color of selected odd tabs."),
+
+            ('tabs.fg.selected.even',
+             SettingValue(typ.QtColor(), '${tabs.fg.selected.odd}'),
+             "Foreground color of selected even tabs."),
+
+            ('tabs.bg.selected.even',
+             SettingValue(typ.QtColor(), '${tabs.bg.selected.odd}'),
+             "Background color of selected even tabs."),
 
             ('tabs.bg.bar',
              SettingValue(typ.QtColor(), '#555555'),
